== In Git

You can now call other steps by String:

  @When("^I call another step$")
  public void iCallAnotherStep() {
      Given("it is magic");
  }

This is currently only supported if you use PicoContainer. Your Step Definition class must inherit from cuke4duke.Steps and 
declare a dependency on cuke4duke.StepMother in the constructor.

=== New Features
* Enable Java step definitions to call other steps indirectly by just providing a string. (#26 Aslak Hellesøy)

== 0.1.6 2009-10-09

IMPORTANT: You *must* upgrade to JRuby 1.4.0RC1 and Cucumber 0.4.0.

There are several steps to this:
1) rm -Rf ~/.m2/repository/.gem
3) Change your POM to use JRuby 1.4.0RC1
3) Change your POM to use Cucumber 0.4.0
2) Run mvn integration-test once with -Dcucumber.installGems=true

=== New features
* Ioke support (Ola Bini, Aslak Hellesøy, Sam Aaron, Jakob Skov-Pedersen)
* Upgraded to use Cucumber 0.4.0 (Aslak Hellesøy)
* Added a simpler way to add a new programming language. See clj_language.rb for an example. (Aslak Hellesøy)
* The cucumber usage formatter is working, reporting unused step definitions. (Aslak Hellesøy)

== 0.1.5 2009-09-27

This is a very exciting release, as it sports support for 3 (!) new programming languages for Cuke4Duke. This means you can now
use all of Cucumber's goodness and write your step definitions in the following programming languages:

* Scala
* Clojure
* Javascript
* Java
* Groovy

The Scala support was mostly Jon-Anders Teigen's effort, with a little help from Ole Christian Rynning and Aslak Hellesøy.
Thanks to Ben Mabey for making the Clojure example code work!

Important! This snapshot requires cucumber 0.3.104, so go ahead and update your POMs with <gem>cucumber --version 0.3.104</gem>
and install it once with -Dcucumber.installGems=true

=== New Features
* Scala support. (Jon-Anders Teigen)
* Javascript support (via Rhino). (Aslak Hellesøy)
* Clojure support. (Aslak Hellesøy)

=== Changed Features