@@ -2,6 +2,8 @@ package cuke4duke.internal.jvmclass;
 
 import java.util.HashMap;
 import java.util.Map;
+import java.util.ArrayList;
+import java.util.List;
 
 import com.google.inject.Guice;
 import com.google.inject.Injector;
@@ -12,38 +14,35 @@ import com.google.inject.Module;
  */
 public class GuiceFactory implements ObjectFactory {
 
+	private final Module module;
+    private final List<Class<?>> classes = new ArrayList<Class<?>>();
+    private final Map<Class<?>, Object> instanceMap = new HashMap<Class<?>, Object>();
     private Injector injector;
-    private Map<Class<?>, Object> instanceMap = new HashMap<Class<?>, Object>();
 
-    public GuiceFactory() {
+    public GuiceFactory() throws Throwable {
         String moduleClassName = System.getProperty("cuke4duke.guiceModule", null);
-        try {
-            Module module = (Module) Class.forName(moduleClassName).newInstance();
-            injector = Guice.createInjector(module);
-        } catch (InstantiationException e) {
-            System.err.println("Could not instantiate Guice module. " + e);
-        } catch (IllegalAccessException e) {
-            System.err.println("Could not access Guice module class. " + e);
-        } catch (ClassNotFoundException e) {
-            System.err.println("Could not find Guice module. " + e);
-        }
+        module = (Module) Class.forName(moduleClassName).newInstance();
     }
 
     public void addClass(Class<?> clazz) {
-        instanceMap.put(clazz, injector.getInstance(clazz));
+        classes.add(clazz);
     }
 
     public void addInstance(Object instance) {
     }
 
     public void createObjects() {
+        injector = Guice.createInjector(module);
+		for(Class<?> clazz: classes) {
+	        instanceMap.put(clazz, injector.getInstance(clazz));
+		}
     }
 
     public void disposeObjects() {
     }
 
-    public Object getComponent(Class<?> type) {
-        return instanceMap.get(type);
+    public Object getComponent(Class<?> clazz) {
+        return instanceMap.get(clazz);
     }
 
 }
